add config server

--- a/licensing-server/src/main/resources/application.properties
+++ b/licensing-server/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 management.endpoint.health.show-details=always
 management.endpoint.beans.enabled=true
+spring.application.name=licensing-server
+spring.config.import=configserver:http://localhost:8071
+spring.profiles.active=dev
+spring.application.cloud.config.server.vault.port=8200
+spring.application.cloud.config.server.vault.host=127.0.0.1
+spring.application.cloud.config.server.vault.kvVersion=2
