--- a/configserver/pom.xml
+++ b/configserver/pom.xml
@@ -9,14 +9,14 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.avseenkov</groupId>
-    <artifactId>licensing-server</artifactId>
+    <artifactId>configserver</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>licensing-server</name>
-    <description>licensing-server</description>
+    <name>configserver</name>
+    <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
-        <docker.image.prefix>ostock</docker.image.prefix>
         <spring-cloud.version>2022.0.4</spring-cloud.version>
+        <docker.image.prefix>ostock</docker.image.prefix>
     </properties>
     <dependencies>
         <dependency>
@@ -24,42 +24,17 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-hateoas</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency>
-
     </dependencies>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -78,19 +53,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                    <image>
-                        <name>${docker.image.prefix}/${project.artifactId}:latest</name>
-                    </image>
-                    <layers>
-                        <enabled>true</enabled>
-                    </layers>
+<!--                    <image>-->
+<!--                        <name>docker.io/${docker.image.prefix}/${project.artifactId}:latest</name>-->
+<!--                    </image>-->
+<!--                    <layers>-->
+<!--                        <enabled>true</enabled>-->
+<!--                    </layers>-->
                 </configuration>
+
             </plugin>
             <plugin>
                 <groupId>io.fabric8</groupId>
@@ -99,7 +69,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>licensing-server</name>
+                            <name>${docker.image.prefix}/${project.artifactId}:latest</name>
                             <build>
                                 <args>
                                     <JAR_FILE>maven/${project.build.finalName}.jar</JAR_FILE>
@@ -113,7 +83,6 @@
                     </images>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
