--- a/licensing-server/src/main/resources/application.properties
+++ b/licensing-server/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 management.endpoint.health.show-details=always
 management.endpoint.beans.enabled=true
 spring.application.name=licensing-server
-spring.config.import=configserver:http://localhost:8071
+spring.config.import=configserver:http://configserver:8071
 spring.profiles.active=dev
-spring.application.cloud.config.server.vault.port=8200
-spring.application.cloud.config.server.vault.host=127.0.0.1
-spring.application.cloud.config.server.vault.kvVersion=2
+#spring.application.cloud.config.server.vault.port=8200
+#spring.application.cloud.config.server.vault.host=127.0.0.1
+#spring.application.cloud.config.server.vault.kvVersion=2
